# twitter-data-model

./: .pre-commit-config.yaml  README.md  pyproject.toml
twitter_data_model/api/: audio_response.py  audio_space.py  audio_space_search.py  card.py  common.py  media.py  response.py  timeline.py  tweet.py  tweet_response.py  user.py  user_response.py  user_verify.py  utils.py
twitter_data_model/data/: .AudioSpaceById.json.swp  AudioSpaceById.json  AudioSpaceSearch.json  Favoriters.json  Followers.json  Following.json  Likes.json  Retweeters.json  TweetDetail.json  TweetResultsByRestId.json  TweetStats.json  UserByScreenName.json  UserMedia.json  UserTweets.json  UserTweetsAndReplies.json  UserUnavailable.json  UsersByRestIds.json
twitter_data_model/tests/: test_audio_space.py  test_tweets.py  test_users.py
